--- a/class-3_assignment/package.json
+++ b/class-3_assignment/package.json
@@ -13,7 +13,8 @@
     "express": "^4.21.0",
     "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
