--- a/class-3_assignment/package.json
+++ b/class-3_assignment/package.json
@@ -14,7 +14,8 @@
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@types/node": "^20",
