--- a/class-12_code/package.json
+++ b/class-12_code/package.json
@@ -9,18 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "class-12_code": "file:",
+    "next": "14.2.17",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.17"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.17",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.17"
+    "typescript": "^5"
   }
 }
