--- a/class-3_assignment/package.json
+++ b/class-3_assignment/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formspree/react": "^2.5.1",
     "class-2_assignment": "file:",
     "express": "^4.21.0",
     "next": "14.2.13",
