--- a/class-3_assignment_Portfolio/package.json
+++ b/class-3_assignment_Portfolio/package.json
@@ -10,20 +10,20 @@
   },
   "dependencies": {
     "@formspree/react": "^2.5.1",
+    "aos": "^2.3.4",
     "class-2_assignment": "file:",
     "express": "^4.21.0",
-    "next": "14.2.13",
+    "next": "14.2.17",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.13",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
